# numeric

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile.in  README.md  test.cpp
benchmark/: CMakeLists.txt
benchmark/math/: CMakeLists.txt  sum.cpp
benchmark/memory/: CMakeLists.txt  copy.cpp
cmake/: FindNetCDF.cmake  generate_basis_lagrange_source.cmake  generate_ref_el_source.cmake  install_dependencies.cmake  setup_hip.cmake
cmake/dependencies/: Boost.cmake  Eigen.cmake  HDF5.cmake  HIP.cmake  NetCDF.cmake  fmt.cmake  googlebenchmark.cmake  googletest.cmake  hipcc.cmake
cmake/dependencies/HDF5/: CMakeLists.txt.in
cmake/dependencies/HIP/: CMakeLists.txt.in
cmake/dependencies/hipcc/: CMakeLists.txt.in
data/hip/include/: api_compat.hpp
data/test/: create_netcdf_test_file.py  test_file.nc  unit_disk_tria.msh
doc/: CMakeLists.txt  Doxyfile.in  common.hpp  generate_element_info_src.cpp  generate_quad_rule_info_src.cpp  point_nodes.tex
examples/: CMakeLists.txt  diffusion_reference_element_matrix.cpp  dof_mapping.cpp  fd_poisson.cpp  fd_wave.cpp  fem_basis_functions.cpp  fem_poisson.cpp  gmsh_reader.cpp  kernel.cpp  mesh_ascii.msh  mesh_binary.msh  minimize.cpp  quad.cpp  stiffness_matrix.cpp  subelement_relations.cpp  unit_disk_2.msh  unit_disk_3.msh  unit_disk_4.msh  unit_disk_5.msh  vtkhdf_lagrangian_basis.cpp  vtkhdf_mesh_writer.cpp
include/: config.hpp.in
include/numeric/: config.hpp.in
include/numeric/equations/fem/: diffusion_element_matrix.hpp  finite_element_matrix.hpp  finite_element_vector.hpp  load_element_vector.hpp
include/numeric/hip/: device.hpp  kernel.hpp  launch_params.hpp  module.hpp  program.hpp  runtime.hpp  safe_call.hpp  stream.hpp
include/numeric/io/: attributable.hpp  file_mode.hpp  gmsh_element_type.hpp  gmsh_reader.hpp  hdf5_attributable.hpp  hdf5_attribute.hpp  hdf5_attribute_creation_property_list.hpp  hdf5_dataspace.hpp  hdf5_error.hpp  hdf5_file.hpp  hdf5_group.hpp  hdf5_property_list.hpp  hdf5_type.hpp  hdf5_variable.hpp  hierarchical_file.hpp  netcdf_dimension.hpp  netcdf_error.hpp  netcdf_file.hpp  netcdf_types.hpp  netcdf_variable.hpp  variable.hpp  vtk_lagrange_element.hpp  vtkhdf_writer.hpp
include/numeric/math/: array_op.hpp  basis_lagrange.hpp  basis_lagrange_cube.hpp  basis_lagrange_quad.hpp  basis_lagrange_segment.hpp  basis_lagrange_specialization.hpp  basis_lagrange_tetra.hpp  basis_lagrange_tria.hpp  conjugate_gradient.hpp  constants.hpp  constrained_linear_operator.hpp  custom_linear_operator.hpp  dihedral_group.hpp  functions.hpp  linear_operator.hpp  linear_solver.hpp  linear_system.hpp  mesh_function.hpp  norm.hpp  polynomial.hpp  reduce.hpp  sum.hpp  sum_device.hpp  sum_host.hpp  summer.hpp  summer_impl.hpp
include/numeric/math/fes/: basis_base.hpp  basis_h1.hpp  basis_l2.hpp  fe_space.hpp
include/numeric/math/graph/: coloring.hpp  sparse_graph.hpp
include/numeric/math/optim/: nelder_mead.hpp
include/numeric/math/quad/: optimize_quad_tria.hpp  quad_rule.hpp
include/numeric/memory/: allocator.hpp  array.hpp  array_base.hpp  array_base_decl.hpp  array_const_view.hpp  array_const_view_decl.hpp  array_op.hpp  array_traits.hpp  array_view.hpp  array_view_decl.hpp  broadcast.hpp  broadcast_decl.hpp  constant.hpp  copy.hpp  copy_device_device.hpp  copy_device_host.hpp  copy_host_device.hpp  copy_host_host.hpp  copy_kernels.hpp  copyer.hpp  copyer_impl.hpp  device_memory_resource.hpp  host_memory_resource.hpp  layout.hpp  linspace.hpp  memcpy.hpp  memory_resource.hpp  memory_resource_factory.hpp  memory_type.hpp  meshgrid.hpp  pinned_memory_resource.hpp  shape.hpp  slice.hpp  stride.hpp
include/numeric/mesh/: cube.hpp  element_base.hpp  element_list.hpp  element_list_base.hpp  element_list_const_view.hpp  element_list_traits.hpp  element_list_view.hpp  element_traits.hpp  elements.hpp  neighbor_relation.hpp  point.hpp  quad.hpp  ref_el_cube.hpp  ref_el_point.hpp  ref_el_quad.hpp  ref_el_segment.hpp  ref_el_tetra.hpp  ref_el_tria.hpp  regular_grid.hpp  segment.hpp  subelement_relation.hpp  tetra.hpp  tria.hpp  unstructured_mesh.hpp  unstructured_mesh_base.hpp  unstructured_mesh_const_view.hpp  unstructured_mesh_view.hpp
include/numeric/meta/: integer_sequence.hpp  meta.hpp  type_tag.hpp
include/numeric/utils/: datatype.hpp  endian.hpp  error.hpp  forward.hpp  lambda.hpp  tuple.hpp  type_indexed_map.hpp  type_name.hpp
scripts/: basis_lagrange.py  elements.py  optimize_quad_rules.py
src/numeric/: CMakeLists.txt
src/numeric/equations/fem/: CMakeLists.txt  finite_element_matrix.cpp  finite_element_vector.cpp
src/numeric/hip/: CMakeLists.txt  device.cpp  kernel.cpp  launch_params.cpp  module.cpp  program.cpp  safe_call.cpp  stream.cpp
src/numeric/io/: CMakeLists.txt  attributable.cpp  file_mode.cpp  gmsh_element_type.cpp  gmsh_reader.cpp  hdf5_attributable.cpp  hdf5_attribute.cpp  hdf5_attribute_creation_property_list.cpp  hdf5_dataspace.cpp  hdf5_error.cpp  hdf5_file.cpp  hdf5_group.cpp  hdf5_property_list.cpp  hdf5_type.cpp  hdf5_variable.cpp  hierarchical_file.cpp  netcdf_dimension.cpp  netcdf_file.cpp  netcdf_variable.cpp  variable.cpp
src/numeric/math/: CMakeLists.txt  constrained_linear_operator.cpp  reduce.cpp  sum_device.cpp
src/numeric/math/fes/: CMakeLists.txt  fe_space.cpp
src/numeric/math/graph/: CMakeLists.txt  coloring.cpp  sparse_graph.cpp
src/numeric/math/quad/: CMakeLists.txt  quad_rule.cpp  (+3 more)
src/numeric/memory/: CMakeLists.txt  copy_device_device.cpp  memory_type.cpp  slice.cpp
src/numeric/mesh/: CMakeLists.txt  neighbor_relation.cpp
src/numeric/utils/: CMakeLists.txt  datatype.cpp
test/: CMakeLists.txt  test.cpp
test/equations/: CMakeLists.txt  fem.cpp
test/io/: CMakeLists.txt  hdf5.cpp  netcdf.cpp
test/math/: CMakeLists.txt  array_op.cpp  dihedral_group.cpp  fes_basis.cpp  polynomial.cpp  quad.cpp  reduce.cpp  sum.cpp
test/memory/: CMakeLists.txt  array.cpp  array_op.cpp  broadcast.cpp  copy.cpp  linspace.cpp  meshgrid.cpp  resource.cpp  slice.cpp
test/mesh/: CMakeLists.txt  elements.cpp  subelement_relation.cpp
test/utils/: CMakeLists.txt  tuple.cpp
