if (NUMERIC_ENABLE_HIP)
  add_executable(kernel)
  target_sources(kernel PUBLIC kernel.cpp)
  set_target_properties(kernel PROPERTIES CXX_STANDARD 20)
  if(NUMERIC_ENABLE_CLANG_TIDY)
    set_target_properties(kernel PROPERTIES CXX_CLANG_TIDY ${NUMERIC_CLANG_TIDY_CMD})
  endif()
  target_link_libraries(kernel PUBLIC numeric)
endif()

add_executable(fd_wave)
target_sources(fd_wave PUBLIC fd_wave.cpp)
set_target_properties(fd_wave PROPERTIES CXX_STANDARD 20)
if(NUMERIC_ENABLE_CLANG_TIDY)
  set_target_properties(fd_wave PROPERTIES CXX_CLANG_TIDY ${NUMERIC_CLANG_TIDY_CMD})
endif()
target_link_libraries(fd_wave PUBLIC numeric)

add_executable(fd_poisson)
target_sources(fd_poisson PUBLIC fd_poisson.cpp)
set_target_properties(fd_poisson PROPERTIES CXX_STANDARD 20)
if(NUMERIC_ENABLE_CLANG_TIDY)
  set_target_properties(fd_poisson PROPERTIES CXX_CLANG_TIDY ${NUMERIC_CLANG_TIDY_CMD})
endif()
target_link_libraries(fd_poisson PUBLIC numeric)
