macro(add_example name)
  add_executable(${name} ${name}.cpp)
  set_target_properties(${name} PROPERTIES CXX_STANDARD 20)
  if (NUMERIC_ENABLE_CLANG_TIDY)
    set_target_properties(${name} PROPERTIES CXX_CLANG_TIDY ${NUMERIC_CLANG_TIDY_CMD})
  endif()
  target_link_libraries(${name} PUBLIC numeric)
endmacro()


if (NUMERIC_ENABLE_HIP)
  add_example(kernel)
endif()
add_example(fd_wave)
add_example(fd_poisson)
add_example(gmsh_reader)
add_example(subelement_relations)
add_example(dof_mapping)
add_example(quad)
add_example(minimize)
add_example(stiffness_matrix)
add_example(vtkhdf_mesh_writer)
add_example(vtkhdf_lagrangian_basis)
add_example(fem_poisson)
add_example(diffusion_reference_element_matrix)
